# Mini-projects-portfolio

./: CMakeLists.txt  README.md  code.cpp  code.h  main.cpp  tests.cpp
DrivingAmongIdiots-adam/: DESIGN.md  README.md
DrivingAmongIdiots-adam/assets/: extractAssets.py
DrivingAmongIdiots-adam/src/: main.py  obstacle.py  player.py  tempCodeRunnerFile.py  testing.py
calendar-review-AdamWalters1/: CMakeLists.txt  README.md
calendar-review-AdamWalters1/cpp/: calendarType.h  calendarTypeImp.cpp  dateType.h  dateTypeImp.cpp  dayType.h  dayTypeImp.cpp  extDateType.h  extDateTypeImp.cpp  main.cpp
calendar-review-AdamWalters1/py/: __init__.py  calendar_type.py  date_type.py  day_type.py  ext_date_type.py
classes-3-AdamWalters1/: CMakeLists.txt  README.md
classes-3-AdamWalters1/src/: bankAccount.h  bankAccountImp.cpp  main.cpp
classes-3-AdamWalters1/tests/: bankAccount_test.cpp
cpp-alg-array-AdamWalters1/: README.md
cpp-alg-array-AdamWalters1/examples/: bubbleSort.cpp  selectionSort.cpp  sequentialSearch.cpp
cpp-arrays-AdamWalters1/: README.md
exceptions-classes-AdamWalters1/: README.md
exceptions-more-classes-AdamWalters1/: README.md
f25-proj3-AdamWalters1/: Project 3_ Cookie Clicker.txt  README.md  project3_main.c
gui-mechanic-shop-AdamWalters1/: README.md  receipt.txt  receipt_20240412124104.txt
gui-python-AdamWalters1/: README.md
python-fileio-AdamWalters1/: README.md
recursion-more-AdamWalters1/: README.md
search-sort-1-AdamWalters1/: CMakeLists.txt  README.md
search-sort-1-AdamWalters1/include/: list_operations.hpp
search-sort-1-AdamWalters1/res/: bubble_sort.cpp  bubble_sort.py  sequential_search.cpp  sequential_search.py
search-sort-1-AdamWalters1/src/: list_operations.cpp  main.cpp
search-sort-1-AdamWalters1/tests/: list_operations_tests.cpp
vectors-2-AdamWalters1/: README.md  tempCodeRunnerFile.python
virtual-and-abstract-AdamWalters1/: README.md
warehouse-cpp-final-AdamWalters1/: README.md  receipt.txt
(+81 files in other folders)
